GameZone/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
spec:
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sql-data
          mountPath: /var/opt/mssql
      volumes:
      - name: sql-data
        persistentVolumeClaim:
          claimName: sql-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  type: ClusterIP
  selector:
    app: sqlserver
  ports:
  - port: 1433
    targetPort: 1433
